--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -4,4 +4,5 @@ $border-color: #c0c0c0;
 $formula-height: 24px;
 $info-cell-width: 40px;
 $row-height: 24px;
+$dashboard-header-height: 64px;
 $cell-width: 120px;
