--- a/src/scss/table.scss
+++ b/src/scss/table.scss
@@ -18,6 +18,7 @@
   }
 
   .row-info{
+    position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -34,6 +35,7 @@
   }
 
   .column{
+    position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -60,11 +62,44 @@
 
     &.selected{
       border: none;
-      outline: 2px solid #3c74ff;
+      outline: 2px solid $primary-color;
       z-index: 2;
 
 
     }
+  }
+
+  .col-resize, .row-resize {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    background: $primary-color;
+    opacity: 0;
+    z-index: 1000;
+    &:hover {
+      opacity: 1!important;
+    }
+  }
+
+  .col-resize{
+    top: 0;
+    width: 2px;
+
+    &:hover{
+      opacity: 1;
+      cursor: col-resize;
+    }
+  }
+
+  .row-resize{
+    left: 0;
+    height: 2px;
+
+    &:hover{
+      opacity: 1;
+      cursor: row-resize;
+    }
+
   }
 
 }
